--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
     "type": "git",
     "url": "git+https://github.com/manifestinteractive/weather-bar-api.git"
   },
-  "author": "",
+  "author": {
+    "name": "Peter Schmalfeldt",
+    "email": "me@peterschmalfeldt.com",
+    "url": "http://peterschmalfeldt.com"
+  },
   "bugs": {
     "url": "https://github.com/manifestinteractive/weather-bar-api/issues"
   },
